cambie la url porque estaba rota

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="./html/menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./archivo.html/menu.html#galeria">Galeria</a>
+                  <a class="nav-link" href="./html/menu.html#galeria">Galeria</a>
                 </li>
                 
               </ul>
